argo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: argocd

spec:
  parentRefs:
  - name: gateway-api
    namespace: default
    sectionName: http
    kind: Gateway
  - name: gateway-api
    namespace: default
    sectionName: https
    kind: Gateway

  hostnames:
  - argo.isujith.dev

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
      weight: 1
